配置打包pom信息，调整资源地址，改为相对地址